pr: refactor add default handleHeaders, handleBody methods to Handler interface to remove duplicted code